@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.2528 2003/06/18 08:17:58 wiz Exp $
+$NetBSD: CHANGES,v 1.2529 2003/06/18 08:58:48 abs Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -2483,3 +2483,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated cvsync to 0.23.2 [gehenna 2003-06-18]
 	Updated cvsync to 0.23.3 [gehenna 2003-06-18]
 	Updated htmllint to 20030518 [wiz 2003-06-18]
+	Updated pkgchk to 1.38 [abs 2003-06-18]  
